feat: implementa desafio de votacao fullstack